--- a/write/config/_default/config.toml
+++ b/write/config/_default/config.toml
@@ -8,6 +8,8 @@ enableRobotsTXT = true
 languageCode = "en-US"
 paginate = 10
 rssLimit = 10
+breadCrumb = true
+highlight = true
 
 # add redirects/headers
 [outputs]
@@ -55,12 +57,12 @@ rel  = "sitemap"
     [markup.goldmark.renderer]
       unsafe = true
   [markup.highlight]
-    codeFences = false
+    codeFences = true
     guessSyntax = false
     hl_Lines = ""
     lineNoStart = 1
-    lineNos = false
-    lineNumbersInTable = true
+    lineNos = true
+    lineNumbersInTable = false
     noClasses = false
     style = "dracula"
     tabWidth = 4
