--- a/write/config/_default/params.toml
+++ b/write/config/_default/params.toml
@@ -47,6 +47,7 @@ docsRepo = "https://github.com/lnquy/www"
 editPage = false
 
 [options]
+  toc = true
   lazySizes = true
   clipBoard = true
   instantPage = true
